<?xml version="1.0"?>
<package>
  <name>dbw_mkz</name>
  <version>0.0.0</version>
  <description>
    Drive-by-wire interface to the Dataspeed Inc. Lincoln MKZ DBW kit
  </description>

  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>dwb_mkz_can</run_depend>
  <run_depend>dwb_mkz_msgs</run_depend>
  <run_depend>dwb_mkz_joystick_demo</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
