<?xml version="1.0"?>
<package>
  <name>dbw_mkz_joystick_demo</name>
  <version>0.0.0</version>
  <description>
    Demonstration of drive-by-wire with joystick
  </description>

  <maintainer email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</maintainer>
  <author email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</author>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dbw_mkz_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>joy</run_depend>

  <export>
  </export>
</package>
