<?xml version="1.0"?>
<package>
  <name>dbw_mkz_msgs</name>
  <version>0.0.0</version>
  <description>
    Drive-by-wire messages for the Lincoln MKZ
  </description>

  <license>Proprietary</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_mkz_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_mkz_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
