<?xml version="1.0"?>
<package>
  <name>dbw_test</name>
  <version>0.0.0</version>
  <description>The dbw_test package</description>
  <maintainer email="dataspeed@todo.todo">dataspeed</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dbw_mkz_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>dbw_mkz_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
